docs/source/_static/css/custom.css
/* ... */
/* fixes for code line numbers */

article.pytorch-article div[class*="highlight-"] {
  max-width: 100%;
  overflow-x: auto;
}

article.pytorch-article table.highlighttable {
  margin-bottom: 0;
}

table.highlighttable td.linenos {
  padding-right: 0;
}

table.highlighttable td.linenos pre {
  background-color: inherit;
  outline: 3px solid #f3f4f7;
  outline-offset: -3px;
}

table.highlighttable td.code {
  padding-left: 0;
  width: 100%;
}

table.highlighttable td.code pre {
  white-space: pre;
}

.highlight pre {
  line-height: 1.6;
}

span.linenos {
  background-color: #f8f8f8;
  margin-right: 1em;
  display: inline-block;
  min-width: 4em;
  text-align: center;
  margin-left: -1.5em;
  padding-bottom: 0.1em;
  margin-bottom: -0.05em;
}

span.linenos.first-linenos {
  padding-top: 1.375rem;
  margin-top: -1.375rem;
}

span.linenos.last-linenos {
  padding-bottom: 1.375rem;
  margin-bottom: -1.375rem;
}

/* tweaks copied from sphinx-rtd-theme */

.rst-content section > img,
.rst-content section > a > img {
  margin-bottom: 24px;
}

.rst-content .align-center {
  margin: auto;
}

article.pytorch-article .reference.download.internal {
  display: unset;
}

/* voxel51-website.css overrides */

.nav__main {
  font-size: 18px;
  padding-left: 0;
  padding-right: 20px;
  justify-content: unset;
  /* avoid horizontal scrollbar */
  min-width: unset;
  width: 100%;
}

.nav__main__logo {
  width: 260px;
  margin-left: 30px;
  margin-right: 20px;
}

#nav__main__items {
  text-align: right;
  width: 100%;
}

@media only screen and (min-width: 1600px) {
  #nav__main__items {
    max-width: 800px;
  }
}

.nav__main a {
  color: inherit;
}

.nav__item {
  padding: 0 10px;
}

#octocat {
  margin-top: 0.6rem;
}

.nav__main .fa-header-icon {
  font-size: 25px;
}

.nav__dropdown__menu {
  z-index: 201;
  min-width: 10rem;
  height: fit-content;
  margin-top: -1.5rem;
  padding: 0.7rem;
  text-align: left;
  line-height: 1.9rem;
}

.nav__dropdown__menu a {
  color: var(--color-primary);
}

@media only screen and (min-width: 320px) and (max-width: 850px) {
  .nav__main {
    height: 52.5px;
  }

  .nav__main__logo {
    margin: 0;
    padding-left: 30px;
  }

  #nav__main__items {
    font-size: 14px;
    line-height: 2rem;
  }

  #nav__main__items .nav__item {
    padding: 0 0 0 10px;
    margin-top: auto;
  }

  .nav__dropdown__menu {
    text-align: right;
  }

  .nav__dropdown__menu a {
    color: var(--text-primary-on-dark);
  }
}

.footer-wrapper {
  background-color: var(--bg-dark-secondary);
}

.footer {
  max-width: 880px; /* match body content (850px) + left margin (30px) */
  font-size: 15px;
  padding-top: 70px;
  padding-bottom: 10px;
}

.footer a {
  line-height: 30px;
  color: inherit;
}

.footer .nav__item--brand {
  margin-bottom: 0;
  line-height: 30px;
}

@media only screen and (min-width: 320px) and (max-width: 850px) {
  .footer {
    font-size: 12px;
    padding-top: 30px;
  }

  .footer__icons {
    padding-top: 10px;
    font-size: 15px;
  }
}

/* tabs */

.tab.sphinx-tab > :last-child {
  margin-bottom: 1px;
}

.tab.sphinx-tab.ui.segment {
  background-color: rgb(252, 252, 252);
}

.sphinx-tabs .ui.tabular.menu .active.item {
  background-color: rgb(252, 252, 252);
}

/* left side section links */

.pytorch-left-menu li.toctree-l1 ul {
  margin-left: 1rem;
}

.pytorch-left-menu li.toctree-l1 ul li {
  font-size: 1em;
}

.pytorch-left-menu li.toctree-l2.current li.toctree-l3 > a,
.pytorch-left-menu li.toctree-l3.current li.toctree-l4 > a {
  display: inline-block;
}

.pytorch-left-menu li.current > a,
.pytorch-left-menu li.toctree-l1.current > a {
  color: var(--color-primary);
}

/* right side section link highlighting */

.pytorch-content-right .pytorch-side-scroll li.current-section {
  font-weight: bold;
  margin-left: -6px;
  border-left: 3px solid var(--color-primary);
  padding-left: 3px;
}

.pytorch-right-menu li.current-section > a.reference.internal.expanded:before,
.pytorch-right-menu
  li.current-section
  > a.reference.internal.not-expanded:before {
  margin-left: -3px;
}

/* tutorials cards */

#tutorial-cards-container {
  margin-bottom: 2rem;
}

#tutorial-cards-container .card.tutorials-card .tutorials-image img {
  height: 100%;
  width: 100%;
  margin: 0%;
}

#tutorial-cards-container .card.tutorials-card:hover:after {
  background-color: var(--color-primary);
}

#tutorial-cards-container .card.tutorials-card {
  background-color: var(--bg-light-secondary);
}

#tutorial-cards-container .filter-btn {
  color: var(--gray-neutral);
  border: 1px solid var(--gray-neutral);
}

#tutorial-cards-container .filter-btn:hover {
  color: var(--color-primary);
  border: 1px solid var(--color-primary);
}

#tutorial-cards-container .all-tag-selected,
#tutorial-cards-container .filter-btn.selected {
  color: #ffffff;
  background-color: var(--color-primary);
  border: 1px solid var(--color-primary);
}

#tutorial-cards-container .all-tag-selected:hover,
#tutorial-cards-container .filter-btn.selected:hover {
  color: #ffffff;
  border: 1px solid #ffffff;
}

#tutorial-cards-container .pagination .active .page {
  background-color: var(--bg-light-secondary);
}

#tutorial-cards-container .pagination .page {
  border: 1px solid var(--bg-light-secondary);
}

/* callout cards/button */

article.pytorch-article .tutorials-callout-container {
  padding-bottom: 0px;
}

article.pytorch-article
  .tutorials-callout-container
  .text-container
  .body-paragraph {
  margin-top: -0.5rem;
  color: var(--text-secondary-on-light);
  line-height: 1.375rem;
}

article.pytorch-article
  .tutorials-callout-container
  .text-container
  .body-paragraph {
  font-size: 1rem;
}

article.pytorch-article .tutorials-callout-container .btn.callout-button {
  font-size: 1rem;
}

article.pytorch-article
  .tutorials-callout-container
  .btn.callout-button:hover:after {
  background-color: var(--color-primary);
}
/* ... */

